--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,12 +1,12 @@
 - title: Email
-  url: mailto:rkuo2000@gmail.com
+  url: mailto:amy46855.22@gmail.com
   icon: fas fa-envelope
 - title: FaceBook
-  url: https://facebook.com/richard.kuo.168
+  url: https://facebook.com/myid
   icon: fab fa-facebook
 - title: Twitter
-  url: https://twitter.com/rkuo2000
+  url: https://twitter.com/myid
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/rkuo2000
+  url: https://github.com/LinTingEn
   icon: fab fa-github
