--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: AI course
-tagline: Deep Learning Lecture
+tagline: capstone project
 
 author:
-  name: Richard Kuo
-  url: https://www.facebook.com/richard.kuo.168
+  name: Lin Ting-En
+  url: https://www.facebook.com/my name
 
 plugins:
   - jekyll-feed
